load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

# Allow docs to access the defs.bzl
package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//swiftpkg/internal:local_swift_package",
        "//swiftpkg/internal:registry_swift_package",
        "//swiftpkg/internal:swift_deps_index",
        "//swiftpkg/internal:swift_deps_info",
        "//swiftpkg/internal:swift_package",
        "//swiftpkg/internal:swift_package_tool",
    ],
)

bzlformat_pkg(name = "bzlformat")

# MARK: - Integration Test

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "build_defs",
    srcs = ["build_defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//swiftpkg/internal:generate_modulemap",
        "//swiftpkg/internal:objc_resource_bundle_accessor",
        "//swiftpkg/internal:resource_bundle_accessor",
        "//swiftpkg/internal:resource_bundle_infoplist",
    ],
)
