module(name = "aws_crt_example")

bazel_dep(name = "rules_swift_package_manager", version = "")
local_path_override(
    module_name = "rules_swift_package_manager",
    path = "../..",
)

bazel_dep(name = "apple_support", version = "1.24.2")
bazel_dep(
    name = "rules_swift",
    version = "3.1.2",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_apple",
    version = "4.2.0",
    repo_name = "build_bazel_rules_apple",
)

apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
swift_deps.configure_package(
    name = "aws-crt-swift",
    init_submodules = True,
    recursive_init_submodules = True,
)
use_repo(
    swift_deps,
    "swift_package",
    "swiftpkg_aws_crt_swift",
)
