load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzltidy:defs.bzl", "tidy")
load("@cgrindel_swift_bazel//swiftpkg:defs.bzl", "swift_update_packages")

tidy(
    name = "tidy",
    targets = [
        ":swift_update_pkgs",
        ":update_build_files",
    ],
)

# MARK: - Gazelle

# Ignore the Swift build folder
# gazelle:exclude .build

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@bazel_skylib_gazelle_plugin//bzl",
        "@cgrindel_swift_bazel//gazelle",
    ],
)

gazelle(
    name = "update_build_files",
    gazelle = ":gazelle_bin",
)

swift_update_packages(
    name = "swift_update_pkgs",
    gazelle = ":gazelle_bin",
)

bzl_library(
    name = "swift_deps",
    srcs = ["swift_deps.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@cgrindel_swift_bazel//swiftpkg:defs"],
)

# List the build_test targets defined in the package:
# bazel query 'kind(_empty_test, @swiftpkg_firebase_ios_sdk//...)'
test_suite(
    name = "xcode_metrics_package_build_tests",
    tests = [
        "@swiftpkg_firebase_ios_sdk//:FirebaseAnalyticsBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseAnalyticsSwift-BetaBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseAnalyticsWithoutAdIdSupportBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseAppCheckBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseAppDistribution-BetaBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseAuthBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseAuthCombine-CommunityBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseCrashlyticsBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseDatabaseBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseDatabaseSwift-BetaBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseDynamicLinksBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseFirestoreBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseFirestoreCombine-CommunityBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseFirestoreSwift-BetaBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseFunctionsBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseFunctionsCombine-CommunityBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseInAppMessaging-BetaBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseInAppMessagingSwift-BetaBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseInstallationsBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseMLModelDownloaderBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseMessagingBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebasePerformanceBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseRemoteConfigBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseStorageBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseStorageCombine-CommunityBuildTest",
        "@swiftpkg_firebase_ios_sdk//:FirebaseStorageSwift-BetaBuildTest",
    ],
)
