bazel_dep(
    name = "rules_swift_package_manager",
    version = "0.0.0",
)
local_path_override(
    module_name = "rules_swift_package_manager",
    path = "../..",
)

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.30.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# The apple_support bazel_dep must come before the rules_cc.
# https://github.com/bazelbuild/apple_support#incompatible-toolchain-resolution
bazel_dep(name = "apple_support", version = "1.24.5")
bazel_dep(
    name = "rules_swift",
    version = "3.4.2",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_apple",
    version = "4.3.3",
    repo_name = "build_bazel_rules_apple",
)

# Workaround: rules_apple 4.3.3 bundletool uses os.system() which doesn't
# inherit import paths under rules_python >= 1.7.0's new bootstrap mechanism.
# Pin to rules_apple main which includes the fix from PR #2866.
# https://github.com/bazelbuild/rules_apple/issues/2843
# Remove once a rules_apple release includes the fix.
git_override(
    module_name = "rules_apple",
    commit = "0385289e9bcad0c86e27441a09415aef4b9a3c12",
    remote = "https://github.com/bazelbuild/rules_apple.git",
)

bazel_dep(
    name = "rules_xcodeproj",
    version = "3.4.1",
    dev_dependency = True,
)
bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.9.0",
    dev_dependency = True,
)
bazel_dep(
    name = "gazelle",
    version = "0.47.0",
    dev_dependency = True,
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "swift_gazelle_plugin",
    version = "0.2.2",
    dev_dependency = True,
)

apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    declare_swift_deps_info = True,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "swift_deps_info",
    "swift_package",
    "swiftpkg_firebase_ios_sdk",
    "swiftpkg_reachability.swift",
)
