bazel_dep(
    name = "rules_swift_package_manager",
    version = "0.0.0",
)
local_path_override(
    module_name = "rules_swift_package_manager",
    path = "../..",
)

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.26.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "apple_support", version = "1.21.1")
bazel_dep(
    name = "rules_swift",
    version = "2.8.1",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_apple",
    version = "3.20.1",
    repo_name = "build_bazel_rules_apple",
)

bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.7.1",
    dev_dependency = True,
)
bazel_dep(
    name = "gazelle",
    version = "0.43.0",
    dev_dependency = True,
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "swift_gazelle_plugin",
    version = "0.2.1",
    dev_dependency = True,
)

apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)

# Example showing that `swift_package` repo can be disabled.
swift_deps.from_package(
    declare_swift_deps_info = True,
    declare_swift_package = False,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
swift_deps.configure_package(
    name = "ios-maps-sdk",
    patch_args = ["-p1"],
    patches = [
        "//third-party/google-maps-ios-sdk:0001-Remove-import-GoogleMaps.patch",
    ],
)
use_repo(
    swift_deps,
    "swift_deps_info",
    "swiftpkg_ios_maps_sdk",
)
