load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@cgrindel_bazel_starlib//bzltidy:defs.bzl", "tidy")

tidy(
    name = "tidy",
    targets = [
        ":update_build_files",
    ],
)

# MARK: - Gazelle

# Ignore the Swift build folder
# gazelle:proto file
# gazelle:proto_strip_import_prefix /protos
# gazelle:proto_import_prefix example
# gazelle:swift_module_naming_convention pascal_case
# gazelle:swift_generate_proto_libraries true
# gazelle:swift_proto_compiler swift_proto=//compilers:swift_proto
# gazelle:swift_proto_compiler swift_client_proto=//compilers:swift_client_proto
# gazelle:swift_proto_compiler swift_server_proto=//compilers:swift_server_proto
# gazelle:swift_generate_grpc_libraries_with_flavors swift_client_proto,swift_server_proto
# gazelle:exclude .build

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@bazel_skylib_gazelle_plugin//bzl",
        "@bazel_gazelle//language/proto",
        "@rules_swift_package_manager//gazelle",
    ],
)

gazelle(
    name = "update_build_files",
    gazelle = ":gazelle_bin",
)
