"""
Example module for grpc + proto target generation.
"""

bazel_dep(
    name = "rules_swift_package_manager",
    version = "0.0.0",
)
local_path_override(
    module_name = "rules_swift_package_manager",
    path = "../..",
)

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.26.0")

# Required by custom swift proto compiler plugin:
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "protobuf", version = "30.2")

# Required for proto_library targets:
bazel_dep(name = "rules_proto", version = "7.1.0")

# Required for compiling objc:
bazel_dep(name = "apple_support", version = "1.21.1")

# Required for swift_binary and swift_proto_library targets:
bazel_dep(name = "rules_swift", version = "2.8.1", repo_name = "build_bazel_rules_swift")

# Configure cc toolchain:
apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")

# Required for SwiftProtobuf and GRPC Swift:
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    declare_swift_deps_info = True,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "swift_deps_info",
    "swift_package",
    "swiftpkg_grpc_swift",
    "swiftpkg_grpc_swift_nio_transport",
    "swiftpkg_grpc_swift_protobuf",
    "swiftpkg_swift_protobuf",
)
