bazel_dep(
    name = "cgrindel_swift_bazel",
    version = "0.0.0",
)
local_path_override(
    module_name = "cgrindel_swift_bazel",
    path = "../..",
)

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.14.9")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(
    name = "rules_swift",
    version = "1.6.0",
    repo_name = "build_bazel_rules_swift",
)

bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.4.1",
    dev_dependency = True,
)
bazel_dep(
    name = "gazelle",
    version = "0.29.0",
    dev_dependency = True,
    repo_name = "bazel_gazelle",
)

non_module_deps = use_extension("//:extensions.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "com_github_apple_swift_argument_parser",
    "com_github_apple_swift_collections",
)
